--- a/application/modules/backend/views/scripts/claim/member.phtml
+++ b/application/modules/backend/views/scripts/claim/member.phtml
@@ -33,7 +33,7 @@ $helperImage = new Default_View_Helper_Image();
             <div class="row product-maker-sidebar">
                 <div class="col-md-5 col-lg-5 col-sm-5 col-xs-5 product-maker-thumbnail relative">
                     <a target="_blank"
-                       href="<?php echo $helperBuildMemberUrl->buildMemberUrl($this->member->member_id); ?>"
+                       href="<?php echo $helperBuildMemberUrl->buildUrl($this->member->member_id); ?>"
                        title="<?= $this->member->username ?>">
                         <div class="profile-image-overlay-4 absolute"></div>
                         <img src="<?= $helperImage->Image($this->member->profile_image_url, array('width' => 100, 'height' => 100)); ?>" alt="member profile image" width="100"
@@ -42,7 +42,7 @@ $helperImage = new Default_View_Helper_Image();
                 </div>
                 <div class="col-md-7 col-lg-7 col-sm-7 col-xs-7 product-maker-summary">
                     <h4><a target="_blank"
-                           href="<?php echo $helperBuildMemberUrl->buildMemberUrl($this->member->member_id); ?>"><span
+                           href="<?php echo $helperBuildMemberUrl->buildUrl($this->member->member_id); ?>"><span
                                 class="glyphicon glyphicon-link"></span> <?= $this->member->username; ?></a></h4>
 
                     <div
@@ -64,10 +64,8 @@ $helperImage = new Default_View_Helper_Image();
                     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 small"><a
                             href="<?= $this->member->link_twitter ?>"
                             target="_blank"><?= $this->member->link_twitter ?></a></div>
-                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 small">Facebook
-                                                                               Name: <?= $this->member->facebook_username ?></div>
-                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 small">Twitter
-                                                                               Name: <?= $this->member->twitter_username ?></div>
+                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 small">Facebook Name: <?= $this->member->facebook_username ?></div>
+                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 small">Twitter Name: <?= $this->member->twitter_username ?></div>
                 </div>
             </div>
         </div>
