--- a/application/modules/default/views/scripts/home/index-common.phtml
+++ b/application/modules/default/views/scripts/home/index-common.phtml
@@ -102,7 +102,7 @@ $member = $getAuthUser->getAuthUser();
                                             <li class="link first"><a href="/product/add/"><?= $this->translate('Add Product') ?></a>
                                             </li>
                                             <li class="link first"><a
-                                                    href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'products') ?>"><?= $this->translate('My Products') ?></a>
+                                                    href="<?= $helperBuildMemberUrl->buildUrl($member->member_id, 'products') ?>"><?= $this->translate('My Products') ?></a>
                                             </li>
                                             <li class="link"><a
                                                     href="/settings/"><?= $this->translate('My Settings') ?></a>
