--- a/application/modules/default/views/scripts/product/partials/sidebar.phtml
+++ b/application/modules/default/views/scripts/product/partials/sidebar.phtml
@@ -37,7 +37,7 @@ $helperImage = new Default_View_Helper_Image();
                 <div class="sidebar-content">
                     <div class="row product-maker-sidebar">
                         <div class="col-md-5 col-lg-5 col-sm-5 col-xs-5 product-maker-thumbnail relative">
-                            <a href="<?php echo $helperBuildMemberUrl->buildMemberUrl($this->member->member_id); ?>"
+                            <a href="<?php echo $helperBuildMemberUrl->buildUrl($this->member->member_id); ?>"
                                title="<?= $this->member->username ?>">
                                 <div class="profile-image-overlay-4 absolute"></div>
                                 <img src="<?= $helperImage->Image($this->member->profile_image_url, array('width' => 100, 'height' => 100)); ?>"
@@ -49,7 +49,7 @@ $helperImage = new Default_View_Helper_Image();
                         </div>
                         <div class="col-md-7 col-lg-7 col-sm-7 col-xs-7 product-maker-summary">
                             <h4>
-                                <a href="<?php echo $helperBuildMemberUrl->buildMemberUrl($this->member->member_id); ?>"><?= $this->member->username; ?></a>
+                                <a href="<?php echo $helperBuildMemberUrl->buildUrl($this->member->member_id); ?>"><?= $this->member->username; ?></a>
                             </h4>
 
                             <div class="small"><?= $this->member->firstname ?> <?= $this->member->lastname ?></div>
