--- a/application/modules/default/views/scripts/widget/config.phtml
+++ b/application/modules/default/views/scripts/widget/config.phtml
@@ -296,12 +296,13 @@
         </article>
 
     <?php
+    $helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
     $supportersArray = array();
     foreach ($this->supporting as $supporter) {
         $new_supporter = new stdClass();
         $new_supporter->username = $supporter->username;
         $new_supporter->img = $supporter->profile_image_url;
-        $new_supporter->url = $this->buildMemberUrl($supporter->member_id);
+        $new_supporter->url = $helpMemberUrl->buildUrl($supporter->member_id);
         array_push($supportersArray, $new_supporter);
     }
     $commentsArray = array();
