--- a/application/modules/default/views/scripts/error/error.phtml
+++ b/application/modules/default/views/scripts/error/error.phtml
@@ -171,7 +171,7 @@ $helperImage = new Default_View_Helper_Image();
             <?php foreach ($users as $key => $user) { ?>
 
                 <div class="thumb">
-                    <a href="<?php echo $buildMemberUrl->buildUrl($user['member_id']); ?>">
+                    <a href="<?php echo $buildMemberUrl->buildExternalUrl($user['member_id']); ?>">
                         <span></span>
                         <img src="<?php echo $helperImage->Image($user['profile_image_url'],array('width' => 110, 'height' => 110, 'crop' => 2)); ?>"/>
                     </a>
