--- a/application/modules/default/views/scripts/widget/partial/widgetbox.phtml
+++ b/application/modules/default/views/scripts/widget/partial/widgetbox.phtml
@@ -156,7 +156,7 @@ foreach ($this->supporting as $supporter) {
     $new_supporter = new stdClass();
     $new_supporter->username = $supporter->username;
     $new_supporter->img = $supporter->profile_image_url;
-    $new_supporter->url = $helperBuildMemberUrl->buildUrl($supporter->member_id, null, null, true);
+    $new_supporter->url = $helperBuildMemberUrl->buildExternalUrl($supporter->member_id, null, null, true);
     array_push($supportersArray, $new_supporter);
 }
 
