--- a/application/modules/default/views/scripts/home/partials/comment_plingcom.phtml
+++ b/application/modules/default/views/scripts/home/partials/comment_plingcom.phtml
@@ -19,43 +19,35 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
-?>
-
-<div class="productrow">
-<div  class="row">
-         
-    
-
+$helpCategories = new Default_View_Helper_FetchCategoriesForProductAsString();
+$helpProductUrl = new Default_View_Helper_BuildProductUrl();
+$helpTruncate = new Default_View_Helper_Truncate();
+$helpPrintDate = new Default_View_Helper_PrintDate();
+$helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
+?><div class="productrow">
+    <div  class="row">
       <div class="col-lg-9">
-      
-             <?= $this->comment['title'] ?>                
-            <br>
-             <span style="font-size: smaller;"><?php echo $this->fetchCategoriesForProductAsString($this->comment['project_id']) ?></span>
-             
-      
-      
-         <div class="small" style="line-height:1.3"><a
-                     href="/p/<?= $this->comment['project_id'] ?>">
-                         <?=$this->truncate(strip_tags($this->comment['comment_text'],' '), 200, '...', false, true)?>      
-                     </a>
-             </div>
-         <span class="time"><?= $this->printDate($this->comment['comment_created_at'])?>
-         </span>
-     
-     </div>
+          <?= $this->comment['title'] ?>
+          <br>
+          <span style="font-size: smaller;">
+              <?php echo $helpCategories->fetchCategoriesForProductAsString($this->comment['project_id']) ?>
+          </span>
+          <div class="small" style="line-height:1.3">
+              <a href="<?= $helpProductUrl->buildProductUrl($this->comment['project_id']) ?>">
+                  <?=$helpTruncate->truncate(strip_tags($this->comment['comment_text'],' '), 200, '...', false, true)?>
+              </a>
+          </div>
+         <span class="time"><?= $helpPrintDate->printDate($this->comment['comment_created_at'])?></span>
+      </div>
 
-     <div class="col-lg-3 text-center">        
-         
-            <div class="userinfo" style="overflow: hidden">
-            <a href="/member/<?php echo $this->comment['member_id'] ?>">
+      <div class="col-lg-3 text-center">
+         <div class="userinfo" style="overflow: hidden">
+            <a href="<?php echo $helpMemberUrl->buildExternalUrl($this->comment['member_id']) ?>">
             <img src="<?= $this->Image($this->comment['profile_image_url'],
                         array('width' => 120, 'height' => 120)) ?>"  style="margin:10px; width: 40px; height:40px; border-radius: 50%"/>
                 <span style="display: block"><?= $this->comment['username'] ?></span>
             </a>
         </div>
-            
-     </div>
-
-    
-</div >
+      </div>
+    </div >
 </div>
