--- a/application/modules/default/views/scripts/product/partials/productCommentsUX1.phtml
+++ b/application/modules/default/views/scripts/product/partials/productCommentsUX1.phtml
@@ -127,7 +127,7 @@ $pageCount = $this->comments->getTotalItemCount()/$this->comments->getItemCountP
                     <?php if ($comment['comment_type'] == Default_Model_DbTable_Comments::COMMENT_TYPE_PLING) : ?>
                         <p class="pull-right history" style="display:inline-block"><span class="glyphicon glyphicon-usd"></span></p>
                     <?php endif ?>
-                    <a class="media-left" href="<?= $helperBuildMemberUrl->buildUrl($comment['member_id']) ?>">
+                    <a class="media-left" href="<?= $helperBuildMemberUrl->buildExternalUrl($comment['member_id']) ?>">
                         <img src="<?= $helperImage->Image($comment['profile_image_url'], array('width' => 40, 'height' => 40)) ?>">
                     </a>
                     <div class="media-body">
