--- a/application/modules/default/views/scripts/user/partials/loopMyDonations.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopMyDonations.phtml
@@ -22,6 +22,8 @@
 
 $helperHumanTiming = new Default_View_Helper_HumanTiming();
 $helperImage = new Default_View_Helper_Image();
+$helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
+$helpProductUrl = new Default_View_Helper_BuildProductUrl();
 ?>
 <div class="tab-content" id="my-earnings-tabs">
     <div>
@@ -44,7 +46,7 @@ $helperImage = new Default_View_Helper_Image();
 
         <div class="row" id="<?= $loopProductId ?>" style="padding-bottom:10px;">
             <div class="col-lg-3 col-md-2 col-sm-2 col-xs-2 ">
-                <a href="/member/<?= $element->member_id ?>">
+                <a href="<?= $helpMemberUrl->buildExternalUrl($element->member_id) ?>">
                 <img src="<?php echo $helperImage->Image($element->profile_image_url,array('width' => 50, 'height' => 50)); ?>"
                          alt="profile-image"                         
                          style="border-radius:50%;  width: 50px; height: 50px; margin-right: 10px"
@@ -60,8 +62,8 @@ $helperImage = new Default_View_Helper_Image();
 
             <div class="col-lg-7 col-md-2 col-sm-2 col-xs-2" >
                 <div style="padding-left: 50px">
-                <a href="/p/<?=$element->project_id?>"><img src="<?php echo $helperImage->Image($element->image_small, array('width' => 80, 'height' => 80)); ?>" style="max-width: 80px; max-height: 80px"/></a>
-                <a href="/p/<?=$element->project_id?>"> <span class="" style="padding-left: 20px"><?php echo $element->title; ?></span></a>
+                <a href="<?=$helpProductUrl->buildProductUrl($element->project_id)?>"><img src="<?php echo $helperImage->Image($element->image_small, array('width' => 80, 'height' => 80)); ?>" style="max-width: 80px; max-height: 80px"/></a>
+                <a href="<?=$helpProductUrl->buildProductUrl($element->project_id)?>"> <span class="" style="padding-left: 20px"><?php echo $element->title; ?></span></a>
                 </div>
             </div>
            
