add package type Electron-Webapp

--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -724,6 +724,7 @@ $categoryPath[] = $valueCatId;
                                     + '<option value=\"2\">Android (APK)</option>'
                                     + '<option value=\"1\">AppImage</option>'
                                     + '<option value=\"5\">Debian</option>'
+                                    + '<option value=\"8\">Electron-Webapp</option>'
                                     + '<option value=\"7\">Flatpak</option>'
                                     + '<option value=\"3\">OS X compatible</option>'
                                     + '<option value=\"6\">Snappy</option>'
@@ -976,6 +977,7 @@ $categoryPath[] = $valueCatId;
                                 + '<option value=\"2\">Android (APK)</option>'
                                 + '<option value=\"1\">AppImage</option>'
                                 + '<option value=\"5\">Debian</option>'
+                                + '<option value=\"8\">Electron-Webapp</option>'
                                 + '<option value=\"7\">Flatpak</option>'
                                 + '<option value=\"3\">OS X compatible</option>'
                                 + '<option value=\"6\">Snappy</option>'
