--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -720,6 +720,7 @@ $this->inlineScript()->appendScript(
                             + '<option value=\"2\">Android (APK)</option>'
                             + '<option value=\"1\">AppImage</option>'
                             + '<option value=\"5\">Debian</option>'
+                            + '<option value=\"8\">Electron-Webapp</option>'
                             + '<option value=\"7\">Flatpak</option>'
                             + '<option value=\"3\">OS X compatible</option>'
                             + '<option value=\"6\">Snappy</option>'
@@ -1019,6 +1020,7 @@ $this->inlineScript()->appendScript(
                         + '<option value=\"2\">Android (APK)</option>'
                         + '<option value=\"1\">AppImage</option>'
                         + '<option value=\"5\">Debian</option>'
+                        + '<option value=\"8\">Electron-Webapp</option>'
                         + '<option value=\"7\">Flatpak</option>'
                         + '<option value=\"3\">OS X compatible</option>'
                         + '<option value=\"6\">Snappy</option>'
