--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -306,6 +306,7 @@
                                             + '<option value=\"2\">Android (APK)</option>'
                                             + '<option value=\"1\">AppImage</option>'
                                             + '<option value=\"5\">Debian</option>'
+                                            + '<option value=\"8\">Electron-Webapp</option>'
                                             + '<option value=\"7\">Flatpak</option>'
                                             + '<option value=\"3\">OS X compatible</option>'
                                             + '<option value=\"6\">Snappy</option>'
@@ -471,6 +472,7 @@
                                                 + '<option value=\"2\">Android (APK)</option>'
                                                 + '<option value=\"1\">AppImage</option>'
                                                 + '<option value=\"5\">Debian</option>'
+                                                + '<option value=\"8\">Electron-Webapp</option>'
                                                 + '<option value=\"7\">Flatpak</option>'
                                                 + '<option value=\"3\">OS X compatible</option>'
                                                 + '<option value=\"6\">Snappy</option>'
